--- a/Commit.html
+++ b/Commit.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Avaliação prática GSO (segundo comite)</title>
+        <title>Avaliação prática GSO (terceiro comite)</title>
     </head>
     <body>
         <p>Cabeçalho</p>
